[package]
name = "qc_boot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"

async-io = "2.4.0"
futures-lite = { version = "2", default-features = false }
nusb = "=0.1.12"
clap-num = "1.2.0"
zerocopy-derive = "0.8.23"
zerocopy = "0.8.23"
